make forcing a split work better SERVER-2419 180?